// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PoolForm tests should not disable button if form is not pristine or not submitting 1`] = `
<Panel>
  <form
    onSubmit={[MockFunction]}
  >
    <Panel.Section>
      <Field
        component={[Function]}
        disabled={false}
        helpText=""
        label="Pool Name"
        name="name"
        validate={[Function]}
      />
      <Connect(AccessControl)
        condition={[Function]}
      >
        <Field
          component={[Function]}
          disabled={false}
          label="Default Signing Domain"
          name="signing_domain"
        />
      </Connect(AccessControl)>
    </Panel.Section>
    <React.Fragment>
      <Panel.Section>
        <p>
          Add sending IPs to the pool by moving them from their current pool.
        </p>
      </Panel.Section>
      <TableCollection
        columns={
          Array [
            "Sending IP",
            "Hostname",
            "IP Pool",
          ]
        }
        defaultSortColumn={null}
        defaultSortDirection="asc"
        getRowData={[Function]}
        pagination={false}
        rows={
          Array [
            Object {
              "external_ip": "external",
              "hostname": "hostname",
            },
            Object {
              "external_ip": "external-2",
              "hostname": "hostname-2",
            },
          ]
        }
      />
    </React.Fragment>
    <Panel.Section>
      <Button
        disabled={false}
        primary={true}
        size="default"
        submit={true}
      >
        Update IP Pool
      </Button>
    </Panel.Section>
  </form>
</Panel>
`;

exports[`PoolForm tests should not render signing_domain if editing default pool 1`] = `
<Panel>
  <form
    onSubmit={[MockFunction]}
  >
    <Panel.Section>
      <Field
        component={[Function]}
        disabled={true}
        helpText="Sorry, you can't edit the default pool's name. Then it wouldn't be the default!"
        label="Pool Name"
        name="name"
        validate={[Function]}
      />
    </Panel.Section>
    <React.Fragment>
      <Panel.Section>
        <p>
          Add sending IPs to the pool by moving them from their current pool.
        </p>
      </Panel.Section>
      <TableCollection
        columns={
          Array [
            "Sending IP",
            "Hostname",
            "IP Pool",
          ]
        }
        defaultSortColumn={null}
        defaultSortDirection="asc"
        getRowData={[Function]}
        pagination={false}
        rows={
          Array [
            Object {
              "external_ip": "external",
              "hostname": "hostname",
            },
            Object {
              "external_ip": "external-2",
              "hostname": "hostname-2",
            },
          ]
        }
      />
    </React.Fragment>
    <Panel.Section>
      <Button
        disabled={true}
        primary={true}
        size="default"
        submit={true}
      >
        Update IP Pool
      </Button>
    </Panel.Section>
  </form>
</Panel>
`;

exports[`PoolForm tests should not render signing_domain if feature flag is disabled 1`] = `
<Panel>
  <form
    onSubmit={[MockFunction]}
  >
    <Panel.Section>
      <Field
        component={[Function]}
        disabled={false}
        helpText=""
        label="Pool Name"
        name="name"
        validate={[Function]}
      />
      <Connect(AccessControl)
        condition={[Function]}
      >
        <Field
          component={[Function]}
          disabled={false}
          label="Default Signing Domain"
          name="signing_domain"
        />
      </Connect(AccessControl)>
    </Panel.Section>
    <React.Fragment>
      <Panel.Section>
        <p>
          Add sending IPs to the pool by moving them from their current pool.
        </p>
      </Panel.Section>
      <TableCollection
        columns={
          Array [
            "Sending IP",
            "Hostname",
            "IP Pool",
          ]
        }
        defaultSortColumn={null}
        defaultSortDirection="asc"
        getRowData={[Function]}
        pagination={false}
        rows={
          Array [
            Object {
              "external_ip": "external",
              "hostname": "hostname",
            },
            Object {
              "external_ip": "external-2",
              "hostname": "hostname-2",
            },
          ]
        }
      />
    </React.Fragment>
    <Panel.Section>
      <Button
        disabled={true}
        primary={true}
        size="default"
        submit={true}
      >
        Update IP Pool
      </Button>
    </Panel.Section>
  </form>
</Panel>
`;

exports[`PoolForm tests should not render table if no ips exist 1`] = `
<Panel>
  <form
    onSubmit={[MockFunction]}
  >
    <Panel.Section>
      <Field
        component={[Function]}
        disabled={false}
        helpText=""
        label="Pool Name"
        name="name"
        validate={[Function]}
      />
      <Connect(AccessControl)
        condition={[Function]}
      >
        <Field
          component={[Function]}
          disabled={false}
          label="Default Signing Domain"
          name="signing_domain"
        />
      </Connect(AccessControl)>
    </Panel.Section>
    <Panel.Section>
      <Button
        disabled={true}
        primary={true}
        size="default"
        submit={true}
      >
        Update IP Pool
      </Button>
    </Panel.Section>
  </form>
</Panel>
`;

exports[`PoolForm tests should not render table if pool is new 1`] = `
<Panel>
  <form
    onSubmit={[MockFunction]}
  >
    <Panel.Section>
      <Field
        component={[Function]}
        disabled={false}
        helpText=""
        label="Pool Name"
        name="name"
        validate={[Function]}
      />
      <Connect(AccessControl)
        condition={[Function]}
      >
        <Field
          component={[Function]}
          disabled={false}
          label="Default Signing Domain"
          name="signing_domain"
        />
      </Connect(AccessControl)>
    </Panel.Section>
    <Panel.Section>
      <Button
        disabled={true}
        primary={true}
        size="default"
        submit={true}
      >
        Create IP Pool
      </Button>
    </Panel.Section>
  </form>
</Panel>
`;

exports[`PoolForm tests should render form 1`] = `
<Panel>
  <form
    onSubmit={[MockFunction]}
  >
    <Panel.Section>
      <Field
        component={[Function]}
        disabled={false}
        helpText=""
        label="Pool Name"
        name="name"
        validate={[Function]}
      />
      <Connect(AccessControl)
        condition={[Function]}
      >
        <Field
          component={[Function]}
          disabled={false}
          label="Default Signing Domain"
          name="signing_domain"
        />
      </Connect(AccessControl)>
    </Panel.Section>
    <React.Fragment>
      <Panel.Section>
        <p>
          Add sending IPs to the pool by moving them from their current pool.
        </p>
      </Panel.Section>
      <TableCollection
        columns={
          Array [
            "Sending IP",
            "Hostname",
            "IP Pool",
          ]
        }
        defaultSortColumn={null}
        defaultSortDirection="asc"
        getRowData={[Function]}
        pagination={false}
        rows={
          Array [
            Object {
              "external_ip": "external",
              "hostname": "hostname",
            },
            Object {
              "external_ip": "external-2",
              "hostname": "hostname-2",
            },
          ]
        }
      />
    </React.Fragment>
    <Panel.Section>
      <Button
        disabled={true}
        primary={true}
        size="default"
        submit={true}
      >
        Update IP Pool
      </Button>
    </Panel.Section>
  </form>
</Panel>
`;

exports[`PoolForm tests should render row properly 1`] = `
Array [
  "ext-ip",
  "host",
  <Field
    component={[Function]}
    disabled={false}
    name="1_1_1_1"
    options="options"
  />,
]
`;

exports[`PoolForm tests should return a msg if there are no ips 1`] = `
<Panel>
  <form
    onSubmit={[MockFunction]}
  >
    <Panel.Section>
      <Field
        component={[Function]}
        disabled={false}
        helpText=""
        label="Pool Name"
        name="name"
        validate={[Function]}
      />
      <Connect(AccessControl)
        condition={[Function]}
      >
        <Field
          component={[Function]}
          disabled={false}
          label="Default Signing Domain"
          name="signing_domain"
        />
      </Connect(AccessControl)>
    </Panel.Section>
    <Panel.Section>
      <p>
        Add a Dedicated IP to the pool by purchasing from the 
        <UnstyledLink
          to="/account/billing"
        >
          billing
        </UnstyledLink>
         page
      </p>
    </Panel.Section>
    <Panel.Section>
      <Button
        disabled={true}
        primary={true}
        size="default"
        submit={true}
      >
        Update IP Pool
      </Button>
    </Panel.Section>
  </form>
</Panel>
`;

exports[`PoolForm tests should show help text when editing default pool 1`] = `
<Panel>
  <form
    onSubmit={[MockFunction]}
  >
    <Panel.Section>
      <Field
        component={[Function]}
        disabled={true}
        helpText="Sorry, you can't edit the default pool's name. Then it wouldn't be the default!"
        label="Pool Name"
        name="name"
        validate={[Function]}
      />
    </Panel.Section>
    <React.Fragment>
      <Panel.Section>
        <p>
          Add sending IPs to the pool by moving them from their current pool.
        </p>
      </Panel.Section>
      <TableCollection
        columns={
          Array [
            "Sending IP",
            "Hostname",
            "IP Pool",
          ]
        }
        defaultSortColumn={null}
        defaultSortDirection="asc"
        getRowData={[Function]}
        pagination={false}
        rows={
          Array [
            Object {
              "external_ip": "external",
              "hostname": "hostname",
            },
            Object {
              "external_ip": "external-2",
              "hostname": "hostname-2",
            },
          ]
        }
      />
    </React.Fragment>
    <Panel.Section>
      <Button
        disabled={true}
        primary={true}
        size="default"
        submit={true}
      >
        Update IP Pool
      </Button>
    </Panel.Section>
  </form>
</Panel>
`;

exports[`PoolForm tests should update button text to Saving and disable button when submitting form 1`] = `
<Panel>
  <form
    onSubmit={[MockFunction]}
  >
    <Panel.Section>
      <Field
        component={[Function]}
        disabled={true}
        helpText=""
        label="Pool Name"
        name="name"
        validate={[Function]}
      />
      <Connect(AccessControl)
        condition={[Function]}
      >
        <Field
          component={[Function]}
          disabled={true}
          label="Default Signing Domain"
          name="signing_domain"
        />
      </Connect(AccessControl)>
    </Panel.Section>
    <React.Fragment>
      <Panel.Section>
        <p>
          Add sending IPs to the pool by moving them from their current pool.
        </p>
      </Panel.Section>
      <TableCollection
        columns={
          Array [
            "Sending IP",
            "Hostname",
            "IP Pool",
          ]
        }
        defaultSortColumn={null}
        defaultSortDirection="asc"
        getRowData={[Function]}
        pagination={false}
        rows={
          Array [
            Object {
              "external_ip": "external",
              "hostname": "hostname",
            },
            Object {
              "external_ip": "external-2",
              "hostname": "hostname-2",
            },
          ]
        }
      />
    </React.Fragment>
    <Panel.Section>
      <Button
        disabled={true}
        primary={true}
        size="default"
        submit={true}
      >
        Saving
      </Button>
    </Panel.Section>
  </form>
</Panel>
`;
